Added Constructor, Inheritance, Properties, Interface and Functional Interface

--- a/Kotlin/3.1-classes-object-inheritance.md
+++ b/Kotlin/3.1-classes-object-inheritance.md
@@ -42,7 +42,7 @@
 - Note that you can also use the `override` keyword as part of the property declaration in a primary constructor.
 
 ##### Derived class initialization order
-- During the construction of a new instance of a derived class, the base class initialization is done as the first step which means that it happens before the initialization logic of the derived class is run.
+- During the construction of a new instance of a derived class, the base class initialization is done as the first step which means that it happens before the initialization logic of the derived class.
 -  When the base class constructor is executed, the properties declared or overridden in the derived class have not yet been initialized.
 
 #### Calling the superclass implementation
