--- a/Kotlin/3.2-classes-object-properties.md
+++ b/Kotlin/3.2-classes-object-properties.md
@@ -1,18 +1,18 @@
 ## Properties
 - The full syntax for declaring a property is as follows.
-- The initializer, getter, and setter are optional. The property type is optional if it can be inferred from the initializer or the getter's return type
   ```
   var <propertyName>[: <PropertyType>] [= <property_initializer>]
     [<getter>]
     [<setter>]
   ```
+- The initializer, getter, and setter are optional. The property type can also become an optional if the property is assigned a value or the type can define from its getter.
 - The full syntax of a read-only property declaration differs from a mutable one in two ways: it starts with val instead of var and does not allow a setter
   ```
   val simple: Int? // has type Int, default getter, must be initialized in constructor
   val inferredType = 1 // has type Int and a default getter
   ```
-- You can definne a custom controller or accessors for a property. If you define a custom getter, it will be called everytime you access the property. Same case with setter. If you define custom setter, it will be called everytime you assign a value into it.
-  Customm Getter:
+- You can define a custom controller or accessors for a property. If you define a custom getter, it will be called everytime you access the property. Same case with setter. If you define custom setter, it will be called everytime you assign a value into it.
+  Custom Getter:
   ```
   class Rectangle(val width: Int, val height: Int) {
     val area: Int // property type is optional since it can be inferred from the getter's return type
@@ -20,7 +20,7 @@
   }
   ```
   
-  You can omit the property type if it can be inferred from the getter:
+  You can omit the property type if the type can be define from the getter:
   ```
   val area get() = this.width * this.height
   ```
@@ -61,7 +61,7 @@
         get() = "{$firstName $lastName}"    
    
    var address : String = "XYZ"           //^because there is no default
-                                            //^implementation of an accessor
+                                            //implementation of an accessor
                                      
   }
   ```
