Updated Access Modifier

--- a/Kotlin/3.5 classes-objects-visibility-modifiers.md
+++ b/Kotlin/3.5 classes-objects-visibility-modifiers.md
@@ -4,7 +4,7 @@
 - `private` modifier means that the declaration inside a class is only available inside that class. For top level declaration, this will be visible inside the file.
 - `protected` declaration only available in its class and subclass.
 - `public` modifier means that the declarations are visible everywhere.
-- 'internal' modifier means that the declaration are visible inside a module.
+- `internal` modifier means that the declaration are visible inside a module.
 
 ### Packages
 - Functions, properties, classes, objects, and interfaces can be declared at the "top-level" directly inside a package:
@@ -48,8 +48,20 @@ class Unrelated(o: Outer) {
 }
 ```
 ### Constructors
-- In order to add modifier in a constructor, a `constructor` keyword is reqiored.
+- In order to add modifier in a constructor, a `constructor` keyword is required.
   ```
   class C private constructor(a: Int) { ... }
   ```
 - Here the constructor is private. By default, all constructors are public, which effectively amounts to them being visible everywhere the class is visible (this means that a constructor of an internal class is only visible within the same module).
+
+### Package vs Module
+
+#### Package:
+- It organized or grouped related classes, functions or other kotlin elements into one place.
+- It helps to avoid name conflict and keep the code structured.
+- It allow to same name of classes or function in different packages.
+
+#### Module
+- It a library that is used within the project.
+- It can be compiled separately.
+- It divide the projects into smaller form of module.
