Added more on Kotlin Extensions

--- a/Kotlin/3.6 classes-objects-extenions.md
+++ b/Kotlin/3.6 classes-objects-extenions.md
@@ -35,3 +35,125 @@ fun main() { 
 	println(result)  // Output: "ell" 
 }
 ```
+
+### Extension Property
+- Extension Property allows to add new property into a class, same as extension function.
+- No backing field 
+- Initializing the new property is not allowed.
+```
+Syntax:
+val <ClassName>.<PropertyName>: <PropertyType>
+    get() = // computed property logic
+
+
+Example:
+val String.firstChar: Char
+    get() = this[0]
+
+fun main() {
+    val text = "Kotlin"
+    println(text.firstChar)  // Output: 'K'
+}
+```
+
+### Companion Object Extensions
+- If a class has a companion object defined, you can also define extension functions and properties for the companion object.
+```
+class MyClass {
+    companion object { }  // will be called "Companion"
+}
+
+fun MyClass.Companion.printCompanion() { println("companion") }
+
+fun main() {
+    MyClass.printCompanion()
+}
+```
+
+### Scope of Extensions
+- In most cases, you define extensions on the top level, directly under packages:
+```
+package org.example.declarations 
+
+fun List<String>.getLongestString() { /*...*/}
+```
+- To use extension function outside its declaring package, you need to import it:
+```
+package org.example.usage 
+import org.example.declarations.getLongestString 
+
+fun main() { 
+	val list = listOf("red", "green", "blue")
+	list.getLongestString()
+}
+```
+
+### Visibility of Extensions
+- The visibility of the extension function depends on both the visibility modifier applied to the extension itself and the visibility of the class being extended.
+- Example:
+```
+internal class MyClass
+
+fun MyClass.sayHello() {
+    println("Hello from MyClass!")
+}
+```
+- Based on the above example, the `sayHello` function is `public` by default, but because `MyClass` is `internal`, the extension can only be used within the same module, even though the extension itself is `public`.
+- **`public` (default)**:
+	-  If no visibility modifier is specified, the extension is `public` by default, which means it can be accessed from anywhere.
+- **`private`**:
+	- A `private` extension function or property is only accessible within the file where it is declared. This is a file-level visibility, meaning no other files can access this extension, even if they are in the same package.
+- **`internal`**:
+	- An `internal` extension is accessible only within the same module.
+- **`protected`**:
+	- Extensions cannot have `protected` visibility. This is because extensions are not members of the class they extend, and `protected` visibility applies to class members and their subclasses.
+
+### Why Extension Function are resolved Statically?
+- As we know extension functions does not modify the existing class. Kotlin resolved extension function on compile time not on runtime.
+- Example:
+```
+open class Parent
+class Child: Parent()
+
+fun Parent.greet() = "Hello from Parent"
+fun Child.greet() = "Hello from Child"
+
+fun main() {
+    val parent: Parent = Child()
+    println(parent.greet())  // Output: "Hello from Parent"
+}
+```
+
+### Declaring Extensions as Members of a Class
+- In Kotlin, **extension functions** and **extension properties** can be declared as **members** of a class, meaning that they can be defined inside another class or object.
+- These extensions will only be accessible when called from the context of the class (or object) in which they are declared.
+- This allows for controlled usage of xtensions, limiting their scope and making them behave like class members with access to the class's internal state.
+```
+class Host(val name: String) {
+    // Declaring an extension function as a member of the Host class
+    fun String.greet() {
+        println("$this says hello to $name")
+    }
+
+    fun callGreet() {
+        // Calling the extension function within the Host class
+        "Guest".greet()
+    }
+}
+
+fun main() {
+    val host = Host("Kotlin")
+    host.callGreet() // Output: Guest says hello to Kotlin
+}
+
+```
+
+### Why No backing field in Extension Property and Why initializers are not allowed
+- In Kotlin, extension properties do not have backing fields because extension properties are essentially a way to add properties to existing classes without modifying their source code. The class itself is not changed, and you are not able to introduce new state or fields to the class.
+- Extension functions and properties are compiled as static methods, which means they operate outside the actual class they extend. Since they are not part of the class itself, they do not have access to the class's private fields or any internal state, meaning they cannot have a backing field.
+- Since an extension property can't introduce new state, it doesn't increase the memory footprint of the original object. It only provides a way to compute or access a value based on existing properties or functions of the class.
+- **Conclusion: Backing field and initializing a value is not required because we are not allowed to make changes on the memory of the existing class.**
+
+### Limitations of Extensions:
+- They are statically resolved, so they don’t behave like true class methods in terms of inheritance and overriding.
+- Extension properties cannot have backing fields.
