Added Kotlin Generics

--- a/Kotlin/3.6 classes-objects-extenions.md
+++ b/Kotlin/3.6 classes-objects-extenions.md
@@ -127,7 +127,7 @@ fun main() {
 ### Declaring Extensions as Members of a Class
 - In Kotlin, **extension functions** and **extension properties** can be declared as **members** of a class, meaning that they can be defined inside another class or object.
 - These extensions will only be accessible when called from the context of the class (or object) in which they are declared.
-- This allows for controlled usage of xtensions, limiting their scope and making them behave like class members with access to the class's internal state.
+- This allows for controlled usage of extensions, limiting their scope and making them behave like class members with access to the class's internal state.
 ```
 class Host(val name: String) {
     // Declaring an extension function as a member of the Host class
