--- a/Kotlin/3.8 classes-objects-sealed-classes-and-interfaces.md
+++ b/Kotlin/3.8 classes-objects-sealed-classes-and-interfaces.md
@@ -3,7 +3,8 @@
 - Sealed classes are powerful feature in kotlin that is used to restrict the class inheritance into specific sets of subclasses defined within a same file.
 - Sealed classes have a limited or fixed sub classes. 
 - These sub classes must be defined in the same file where sealed class is defined.
-- The key benefits of sealed classes is that it ensure type safety, as Kotlin can know all the types of sub classes at compile time.
+- The key benefits of sealed classes is that it ensure type safety, as Kotlin can know all the types of sub classes at compile time
+- Sealed classes holds the states (properties).
 
 ```
 sealed class Response
@@ -56,3 +57,5 @@ fun main() {
 - Sealed class can only be subclassed within the same file while abstract class subclassed from any file.
 - Sealed class represent restricted type hierarchies while abstract class represent generic hierarchies.
 - Sealed class can have data classes, object declarations, and regular classes while abstract class used with normal classes.
+
+# TODO - Sealed Interface?
