Added Anonymous Inner Class

--- a/Kotlin/3.10 classes-objects-nested-and-inner-classes.md
+++ b/Kotlin/3.10 classes-objects-nested-and-inner-classes.md
@@ -50,4 +50,35 @@ fun main() {
 ```
 
 ### Anonymous Inner Classes
-- 
+- It is a shortcut way of implementing an interface or abstract classes
+- It allows to create an instance of a class that implements interface or abstract without defining a class.
+- In short its like a class provides the concrete implementation of an interface without specifying or defining that class 
+- Anonymous inner classes are commonly used when implementing interfaces.
+- You can also use anonymous inner classes to provide concrete implementations for abstract methods of an abstract class.
+- An anonymous inner class can implement multiple interfaces.
+- In Android, anonymous inner classes are frequently used for event handling, such as setting listeners for button clicks.
+- Kotlin allows you to replace anonymous inner classes with **lambda expressions**.
+```
+interface ClickListener {
+    fun onClick()
+}
+
+fun main() {
+    val buttonClickListener = object : ClickListener {
+        override fun onClick() {
+            println("Button clicked!")
+        }
+    }
+
+    buttonClickListener.onClick()  // Output: Button clicked!
+}
+
+```
+
+### Syntax of Anonymous Inner Class
+- To create an anonymous inner class in Kotlin, use the `object` expression.
+- The `object` keyword allows you to create a new class and instantiate it at the same time, without explicitly giving it a name.
+
+### Limitations of Anonymous Inner Classes
+- **No constructor**: You cannot define a constructor in an anonymous inner class. You can only pass arguments to the superclass constructor if the class extends a superclass.
+- **One-time use**: Anonymous inner classes are intended for single-use scenarios. If you need the same logic multiple times, it is better to define a named class.
