Added Difference of Inlice Value Class and Type Aliases

--- a/Kotlin/3.12 classes-object-inline-value.md
+++ b/Kotlin/3.12 classes-object-inline-value.md
@@ -105,4 +105,7 @@ val validNumber = PositiveInt(5) // ✅ Works.
 - Data classes are more flexible and can be used for complex data and having more than one property. In comparison, Inline classes can have single property.
 - Inline classes are good in performance, as there is no additional allocation of objects at runtime.
 
-# TODO: ## Inline classes vs type aliases﻿
+### Inline classes vs type aliases﻿
+- Both are basically used to provide an alternative names for existing types.
+- Inline classes introduces new type by updating the functionality of existing type. For Example, creating a Email inline value class from `String` type. This Email new type has new functionality of validating emails.
+- Type Aliases only introduce an alternative names for an existing type. It do not introduces new types.
