--- a/Kotlin/04-Functions/4.1 Higher Order Function and Lambdas.md
+++ b/Kotlin/04-Functions/4.1 Higher Order Function and Lambdas.md
@@ -21,6 +21,7 @@
 () -> Unit
 ```
 
+
 ### Passing Functions as Parameters
 - In kotlin, with the help of the function types a function can be passed as an argument.
 ```
@@ -34,6 +35,7 @@ val result = calculate(5, 10, sum) // Pass a lambda
 println(result) // Output: 15
 ```
 
+
 ### Returning Functions
 - With function types, a function can return another function.
 ```
@@ -46,9 +48,13 @@ val timesThree = createMultiplier(3)
 println(timesThree(5)) // Output: 15
 ```
 
+
 ### Common Higher-Order Functions in Kotlin's Standard Library
 - **`map`**: Applies a transformation to each element.
 - **`filter`**: Filters elements based on a conditions.
 - **`reduce`**: Combines elements into a single result.
 - **`forEach`**: Iterates over each element.
 - **`flatMap`**: Maps each element and flattens the result.
+
+### Lambdas Expressions
+- 
