Added Literal Functions

--- a/Kotlin/04-Functions/4.1 Higher Order Function and Lambdas.md
+++ b/Kotlin/04-Functions/4.1 Higher Order Function and Lambdas.md
@@ -56,5 +56,8 @@ println(timesThree(5)) // Output: 15
 - **`forEach`**: Iterates over each element.
 - **`flatMap`**: Maps each element and flattens the result.
 
-### Lambdas Expressions
-- 
+### Lambdas Expressions and Anonymous Functions
+- Lambdas expressions and anonymous functions are literal functions.
+- Literal functions allow you to define a function without naming explicitly. 
+- Basically, it allows you to define small block of code that can be passed as a parameters, allows function to return another function and code that allows to execute inline.
+- They are also known as functional programming.
