Added Lambda Expressions and Anonymous Functions

--- a/Kotlin/04-Functions/4.1 Higher Order Function and Lambdas.md
+++ b/Kotlin/04-Functions/4.1 Higher Order Function and Lambdas.md
@@ -3,7 +3,7 @@
 
 ### Function Types
 - Function types represents the types of a function. Example, what are the types of parameters and return type.
-- With the help of function types, the function can be treated as a value. This enable a function to be passed as an argument into other function and also enable to return a function from other functions.
+- With the help of function types, the function can be treated as a value. This enable a function to be passed as an argument into other function and also enable a function to return another function.
 - Syntax of function type
 ```
 (A, B, C) -> R
@@ -56,8 +56,150 @@ println(timesThree(5)) // Output: 15
 - **`forEach`**: Iterates over each element.
 - **`flatMap`**: Maps each element and flattens the result.
 
-### Lambdas Expressions and Anonymous Functions
+### Lambda Expressions and Anonymous Functions
 - Lambdas expressions and anonymous functions are literal functions.
 - Literal functions allow you to define a function without naming explicitly. 
 - Basically, it allows you to define small block of code that can be passed as a parameters, allows function to return another function and code that allows to execute inline.
 - They are also known as functional programming.
+- Written in a single line and commonly used for short and simple operations.
+
+#### Lambda Expressions
+- Lambda expressions is written in single line of code  and surrounded with curly braces.
+- Syntax:
+```
+val sum: (Int, Int) -> Int = { x: Int, y: Int -> x + y }
+```
+- The parameter declarations goes before `->` and the body or expressions goes after `->`.
+- If you leave all the optional annotations out, what's left looks like this:
+```
+val sum = { x: Int, y: Int -> x + y }
+```
+
+#### Trailing Lambdas
+- If a function has a lambda as its last parameter, you can write it outside parentheses.
+- Example without trailing lambda:
+```
+listOf(1, 2, 3).forEach({ println(it) })
+```
+- With trailing lambda:
+```
+listOf(1, 2, 3).forEach { println(it) }
+```
+- If a functions has only one lambda parameter, the parentheses can be removed entirely.
+- If a functions has multiple parameters, this lambda only applies on last lambda parameter.
+- If a function has multiple lambda expressions, only the last lambda can be written as a trailing lambda.
+
+##### Examples of Trailing Lambdas in Standard Library
+1. **`forEach`**:
+```
+val items = listOf("Apple", "Banana", "Cherry")
+items.forEach { println(it) }
+```
+3. **`filter` and `map`**:
+```
+val numbers = listOf(1, 2, 3, 4, 5)
+val evenNumbers = numbers.filter { it % 2 == 0 }
+val squaredNumbers = numbers.map { it * it }
+println(evenNumbers)  // Output: [2, 4]
+println(squaredNumbers) // Output: [1, 4, 9, 16, 25]
+```
+5. **`run`**:
+```
+val result = run {
+    val x = 10
+    val y = 20
+    x + y
+}
+println(result)  // Output: 30
+```
+7. **Custom Higher-Order Function**:
+```
+fun performOperation(a: Int, b: Int, operation: (Int, Int) -> Int): Int {
+    return operation(a, b)
+}
+
+//with trailing lambda
+val result = performOperation(5, 10) { x, y -> x + y }
+
+//without trailing lambda
+val sum = { x: Int, y: Int -> x + y }
+val result = performOperation(5, 10, sum)
+
+println(result)  // Output: 15
+```
+
+#### Returning a value from a lambda expression
+- In kotlin, the return value of the lambda is the result of its last expression.
+- Unlike regular function, lambdas in kotlin do not require an explicit `return`  statement to return a value.
+- You can also return a value using `qualified return` syntax.
+```
+ints.filter {
+	val shouldFilter = it > 0 
+	shouldFilter 
+}
+
+//Expicit Returning value
+ints.filter {
+	val shouldFilter = it > 0 
+	return@filter shouldFilter 
+}
+```
+
+- In lambda, the `return` keyword is used in a function if the lambda is inline. This behaviour is also called `non-local return`.
+```
+fun findFirstEven(numbers: List<Int>): Int? {
+    numbers.forEach {
+        if (it % 2 == 0) return it // Non-local return
+    }
+    return null
+}
+
+println(findFirstEven(listOf(1, 3, 5, 4, 7))) // Output: 4
+```
+
+#### Anonymous Functions
+- In lambda expressions, `return` cannot be used. If you need to explicitly define a `return` statement use anonymous functions.
+```
+fun(x: Int, y: Int): Int = x + y
+```
+- Anonymous function looks like regular function the only difference is anonymous don't have function name. Its body can be expressions or a block
+```
+fun(x: Int, y: Int): Int {
+	return x + y 
+}
+```
+- The return type is determine automatically by anonymous function with expressions body. 
+- The return type need to be defined explicitly by anonymous function with block of code.
+
+#### Difference between Lambda and Anonymous Function
+- We cannot use `return` statement in lambda unless it is inline inside a function. The `return` statement is used in anonymous functions.
+- Parameters in lambda can be determine implicitly whereas in anonymous functions parameters need to be define explicitly.
+- Lambda is a non local return means it exits the enclosing function. Anonymous function is local return which means it exits the anonymous function not the enclosing function.
+```
+//Lambda with non local return
+fun findFirstEven(numbers: List<Int>): Int? {
+    numbers.forEach { // Inline higher-order function
+        if (it % 2 == 0) return it // Non-local return: exits findFirstEven
+    }
+    return null // This is only executed if no even number is found
+}
+
+println(findFirstEven(listOf(1, 3, 5, 4, 7))) // Output: 4
+
+
+//Anonymous function with local return
+fun findFirstEven(numbers: List<Int>): Int? {
+    numbers.forEach(fun(it: Int) { // Anonymous function
+        if (it % 2 == 0) return // Local return: exits only this anonymous function
+    })
+    return null // Always executed, as return only applies to the anonymous function
+}
+
+println(findFirstEven(listOf(1, 3, 5, 4, 7))) // Output: null
+```
+
+#### Underscore for unused variables
+- If the lambda parameter is unused, you can place an underscore instead of its name:
+```
+map.forEach { (_, value) -> println("$value!") }
+```
