Added More on Lambda and Trailing Lambda with Examples

--- a/Kotlin/04-Functions/4.1 higher-order-function-and-Lambdas.md
+++ b/Kotlin/04-Functions/4.1 higher-order-function-and-Lambdas.md
@@ -57,6 +57,7 @@ println(timesThree(5)) // Output: 15
 - **`flatMap`**: Maps each element and flattens the result.
 
 ### Lambda Expressions and Anonymous Functions
+- Both are the shorter way in describing a function. (Function without name)
 - Lambdas expressions and anonymous functions are literal functions.
 - Literal functions allow you to define a function without naming explicitly. 
 - Basically, it allows you to define small block of code that can be passed as a parameters, allows function to return another function and code that allows to execute inline.
@@ -64,8 +65,9 @@ println(timesThree(5)) // Output: 15
 - Written in a single line and commonly used for short and simple operations.
 
 #### Lambda Expressions
-- Lambda expressions is written in single line of code  and surrounded with curly braces.
+- Lambda expressions is written in single line of code and surrounded with curly braces.
 - Syntax:
+- `val lambdaName: ParameterType -> ReturnType = {ParameterName -> body}`
 ```
 val sum: (Int, Int) -> Int = { x: Int, y: Int -> x + y }
 ```
@@ -76,7 +78,7 @@ val sum = { x: Int, y: Int -> x + y }
 ```
 
 #### Trailing Lambdas
-- If a function has a lambda as its last parameter, you can write it outside parentheses.
+- If the last parameter of the function is lambda, then we can make this lambda as trailing by putting the last lambda parameter outside the parentheses. (Putting the lambda inside a body)
 - Example without trailing lambda:
 ```
 listOf(1, 2, 3).forEach({ println(it) })
@@ -88,6 +90,27 @@ listOf(1, 2, 3).forEach { println(it) }
 - If a functions has only one lambda parameter, the parentheses can be removed entirely.
 - If a functions has multiple parameters, this lambda only applies on last lambda parameter.
 - If a function has multiple lambda expressions, only the last lambda can be written as a trailing lambda.
+
+##### Example
+```
+fun enhancedMessage(message: String, funcAsParameter: (String) -> Int) {
+	print("$message ${funcAsParameter("Hey")}")
+}
+
+//Calling the function 'enhancedMessage'
+enhancedMessage(message = "Hello there,") { it:String
+	print(it)
+	31  
+}
+//OUTPUT: HeyHello there, 31
+
+//We can also call other function like
+enhancedMessage(message = "Hello there,") { it:String
+	println(it)
+	sum(10, 12)
+}
+//OUTPUT: HeyHello there, 22
+```
 
 ##### Examples of Trailing Lambdas in Standard Library
 1. **`forEach`**:
