--- a/Jetpack/1 Compose/1.1 Basics.md
+++ b/Jetpack/1 Compose/1.1 Basics.md
@@ -77,7 +77,7 @@ Box(
 ```
 
 ##### Custom Modifiers
-- If there is a style or behavior modifier that is used multiple times, you can create a custom modifier for these modifiers to remove the duplications of modifier.
+- If there is a style or behavior modifier that is used multiple times, you can create a custom modifier for these modifiers to remove the duplications of the modifier.
 ```
 fun Modifier.customPadding() = this.padding(16.dp).background(Color.LightGray)
 
