Updated State Management

--- a/Jetpack/1 Compose/1.2 State Management.md
+++ b/Jetpack/1 Compose/1.2 State Management.md
@@ -20,6 +20,7 @@ fun RememberExample() {
     Text(text = "Counter: $counter")
 }
 ```
+
 #### 2. Mutable State (`mutableStateOf`)
 - A state holder that updates the UI when its value changes.
 - It is used in recomposing composable UI.
@@ -45,3 +46,110 @@ fun CounterExample() {
     }
 }
 ```
+
+#### 2. Derived State (`derivedStateOf`)
+- Creating a state based on the value of another state.
+- The state depends on the computed or calculated value of another state.
+- It optimizes recomposition by avoiding unnecessary recompositions.
+- It ensures that recompositions only occur if the computed value changes, not every time-dependent state changes.
+```
+@Composable
+fun DerivedStateExample() {
+    var inputText by remember { mutableStateOf("") }
+    val isLongText = derivedStateOf { inputText.length > 10 }
+
+    Column {
+        TextField(
+            value = inputText,
+            onValueChange = { inputText = it },
+            label = { Text("Enter text") }
+        )
+        if (isLongText.value) {
+            Text("Your text is long!")
+        } else {
+            Text("Your text is short!")
+        }
+    }
+}
+```
+- The `text` composable will only recompose when the `isLongText.value` changes. In this way, unnecessary recompositions can be avoided when text length changes.
+
+#### 3. State Hoisting
+- A design pattern where the state is managed at a higher level composition or parent, and it is passed down to child composable. The child composable is responsible for updating the UI based on the state, but they do not directly manage the state.
+- It is basically used to make Composable functions stateless. The state of the composable is managed outside by its parent compose function.
+- With state hoisting, it can make composable functions reusable and easy to test.
+##### Example Without State Hoisting
+```
+@Composable
+fun Counter() {
+    var count by remember { mutableStateOf(0) }
+    Column(
+        horizontalAlignment = Alignment.CenterHorizontally,
+        verticalArrangement = Arrangement.Center
+    ) {
+        Text("Count: $count", fontSize = 24.sp)
+        Button(onClick = { count++ }) {
+            Text("Increment")
+        }
+    }
+}
+```
+
+#####  Example With State Hoisting
+```
+// Child Composable (Stateless)
+@Composable
+fun CounterDisplay(count: Int, onIncrement: () -> Unit) {
+    Column(
+        horizontalAlignment = Alignment.CenterHorizontally,
+        verticalArrangement = Arrangement.Center
+    ) {
+        Text("Count: $count", fontSize = 24.sp)
+        Button(onClick = onIncrement) {
+            Text("Increment")
+        }
+    }
+}
+
+
+// Parent Composable (Manages State)
+@Composable
+fun CounterParent() {
+    var count by remember { mutableStateOf(0) }
+    CounterDisplay(count = count, onIncrement = { count++ })
+}
+```
+
+ ##### Advanced Example: Two-way Data Binding
+ - State Hoisting supports two-way binding patterns, where the child modifies the state.
+```
+// Child Composable (Stateless TextField)
+@Composable
+fun TextInput(value: String, onValueChange: (String) -> Unit) {
+    TextField(
+        value = value,
+        onValueChange = onValueChange,
+        label = { Text("Enter Text") }
+    )
+}
+
+
+// Parent Composable** (State Management)
+@Composable
+fun ParentTextInput() {
+    var text by remember { mutableStateOf("") }
+    Column {
+        TextInput(value = text, onValueChange = { text = it })
+        Text("You entered: $text")
+    }
+}
+```
+
+##### When to Hoist State?
+- If the parent composable needs to control the state.
+- If the state needs to be shared across multiple composables.
+- If the child composable must remain reusable and independent.
+##### Combine with ViewModels
+- For larger apps, manage the state using `ViewModel` to ensure the state survives configuration changes.
+
+#### 4. ViewModel for State Management
