Added All Notes Related to State Management

--- a/Jetpack/1 Compose/1.2 State Management.md
+++ b/Jetpack/1 Compose/1.2 State Management.md
@@ -77,6 +77,7 @@ fun DerivedStateExample() {
 #### 3. State Hoisting
 - A design pattern where the state is managed at a higher level composition or parent, and it is passed down to child composable. The child composable is responsible for updating the UI based on the state, but they do not directly manage the state.
 - It is basically used to make Composable functions stateless. The state of the composable is managed outside by its parent compose function.
+- Instead of keeping state inside a child composable, **move it to a parent and pass it down**.
 - With state hoisting, it can make composable functions reusable and easy to test.
 ##### Example Without State Hoisting
 ```
@@ -153,3 +154,108 @@ fun ParentTextInput() {
 - For larger apps, manage the state using `ViewModel` to ensure the state survives configuration changes.
 
 #### 4. ViewModel for State Management
+- For long-lived state tied to the lifecycle, use **ViewModel** with Compose
+- Combine `viewModel` and `State`:
+```
+@HiltViewModel
+class MyViewModel @Inject constructor() : ViewModel() {
+    var text by mutableStateOf("")
+        private set
+}
+
+@Composable
+fun MyScreen(viewModel: MyViewModel = hiltViewModel()) {
+    val text = viewModel.text
+    TextField(value = text, onValueChange = { viewModel.text = it })
+}
+```
+
+- While using ViewModel in Compose, instead of `MutableState` use `StateFlow` for reactive UI updates.
+- Always use `private var` for mutable data and immutable (`val`) for the data that need to be exposed in UI.
+- StateFlow Example:
+```
+//Viewmodel
+class CounterViewModel : ViewModel() {
+    private val _count = MutableStateFlow(0)
+    val count = _count.asStateFlow()  // Exposed as read-only
+
+    fun increment() {
+        _count.value++
+    }
+}
+
+
+//Compose Function
+@Composable
+fun CounterScreen(viewModel: CounterViewModel = viewModel()) {
+    val count by viewModel.count.collectAsState()
+
+    Column(
+        horizontalAlignment = Alignment.CenterHorizontally,
+        verticalArrangement = Arrangement.Center
+    ) {
+        Text("Count: $count", fontSize = 24.sp)
+        Button(onClick = { viewModel.increment() }) {
+            Text("Increment")
+        }
+    }
+}
+```
+
+### Best Practices for Managing State
+#### 1. Use `remember` for Local State
+- Use it in local UI states like a checkbox, text field, or toggle.
+- States that do not need to persist across configuration changes.
+#### 2. Use `rememberSaveable` to Survive Configuration Changes
+- UI states like **TextField inputs, selected tabs, or scroll positions** that should persist after screen rotation.
+#### 3. Hoist State to Parent Composable (State Hoisting)
+- Instead of keeping state inside a child composable, **move it to a parent and pass it down**.
+#### 4. Use `ViewModel` for Persistent State
+- Use `ViewModel`, if the data needs to be available across the application or across screen orientations.
+- Managing complex UI logic that shouldn’t be in the composable.
+#### 5. Use `StateFlow` Instead of `MutableState` for Performance
+- For larger apps, `StateFlow` is **more efficient** than `mutableStateOf()`
+#### 6. Use `produceState` for Asynchronous State (API Calls, Databases)
+- When fetching data asynchronously, use `produceState` to manage it efficiently.
+- Fetching **API data** inside a composable.
+- Managing **asynchronous data** efficiently.
+#### 7. Use `rememberCoroutineScope` for Long-Running Tasks
+- If you need to launch a coroutine inside a composable, use `rememberCoroutineScope`.
+- Prevents memory leaks (lifecycle-aware).
+- Properly handles background tasks.
+```
+@Composable
+fun CoroutineExample() {
+    val coroutineScope = rememberCoroutineScope()
+
+    Button(onClick = {
+        coroutineScope.launch {
+            delay(2000)
+            println("Task Completed")
+        }
+    }) {
+        Text("Start Task")
+    }
+}
+```
+#### 8. Prevents Unnecessary Recompositions
+- Use tools like `SnapshotFlow` and `derivedStateOf` to control recompositions.
+#### 9. Use `rememberUpdatedState` for Changing Lambdas
+- If a composable **captures a lambda function**, use `rememberUpdatedState` to avoid stale references.
+- Ensures lambdas stay updated when passed to a coroutine.
+- It keeps function references up-to-date.
+```
+@Composable
+fun Timer(onTimeout: () -> Unit) {
+    val updatedOnTimeout by rememberUpdatedState(onTimeout)
+
+    LaunchedEffect(Unit) {
+        delay(5000)
+        updatedOnTimeout() // Ensures latest function is used
+    }
+}
+```
+#### 10. Optimize Large UI Lists with `LazyColumn` & `key`
+- For lists, use `LazyColumn` with `key` to improve performance.
+- Improves scrolling performance.
+- `key` ensures UI updates efficiently.
