Updated State Mangement File

--- a/Jetpack/1 Compose/1.2 State Management.md
+++ b/Jetpack/1 Compose/1.2 State Management.md
@@ -259,3 +259,7 @@ fun Timer(onTimeout: () -> Unit) {
 - For lists, use `LazyColumn` with `key` to improve performance.
 - Improves scrolling performance.
 - `key` ensures UI updates efficiently.
+
+### Tools for Debugging and Optimization
+- **Layout Inspector:** Debug your composables and verify the state hierarchy.
+- **Recomposition Tracking:** Use `Debug mode` tools to identify excessive recompositions.
