Added More about WorkManager

--- a/Jetpack/2. Work Manager/1. Concepts.md
+++ b/Jetpack/2. Work Manager/1. Concepts.md
@@ -10,20 +10,6 @@
 - Supports **chaining** and **parallel work** with `WorkContinuation`.
 - Can observe work states using **LiveData** or Kotlin **Flow**.
 
-### Why WorkManager Exists
-- Android has had multiple APIs for background work:
-	- **Services** → Run tasks in the background (but heavy, killed under Doze).
-	- **AlarmManager** → Schedule tasks, but not guaranteed if the device is idle.
-	- **JobScheduler** → Works from API 21+, but you still need backward compatibility.
-- WorkManager **abstracts all these APIs** and guarantees that work will **eventually run**, no matter:
-	- The app is killed
-	- Device restarts
-	- OS restrictions (Doze, battery optimizations)
-- WorkManager decides internally whether to use:
-	- `JobScheduler` (preferred, API 23+)
-	- `AlarmManager + BroadcastReceiver` (API < 23)
-	- `Firebase JobDispatcher` (legacy, no longer required)
-
 ### Deferrable vs Immediate Work 
 - **Deferrable work (Non-real time)** -> Non-urgent or can be delayed. WorkManager is the best option here.
 - **Immediate work (Real-time)** -> Needs to happen now. Use a coroutine/foreground service.
@@ -88,7 +74,7 @@ The work is defined inside the Worker Class.
 	- Automatically handles cancellation if WorkManager stops your job. No need to manually check.
 	- Cleaner for Retrofit/Ktor/Room Calls.
 	- Preferred for **long-running network/db operations** in modern apps.
-	- User CoroutineWorker for:
+	- Use CoroutineWorker for:
 		- If you use Room (suspend DAO methods).
 		- If you use Retrofit/Ktor with coroutines.
 		- For long-running or async jobs.
@@ -98,8 +84,8 @@ The work is defined inside the Worker Class.
 ### Worker Result Handling
 Every worker must end with a result:
 - `success()` → Done, not retried.
-- `retry()` → Temporary error (WorkManager retries with backoff).
-- `failure()` → Hard failure (chain stops).
+- `retry()` →  Work stops temporarily. (WorkManager retries with backoff).
+- `failure()` → Work stops permanently (chain stops).
 
 ### Work Chaining
 - If there are works that are dependent on each other, you can chain them.
@@ -162,6 +148,7 @@ WorkManager.getInstance(context)
 		- Use **REPLACE** for the manual "sync now" button.
 	- **APPEND** → Chain a new work after the execution of the old one.
 		- If existing work is still running or enqueued → the new work will wait and run **after the old one finishes**.
+		- No auto cancellations of work.
 		- If old work is already finished → new work runs immediately.
 		- Only works with **OneTimeWorkRequest** chains (not with `PeriodicWorkRequest`).
 		- Example: user adds multiple "upload image" tasks → each request should wait until the previous one finishes.
@@ -205,17 +192,3 @@ WorkManager.getInstance(context).cancelWorkById(request.id)
 	- Playing music → needs instant playback (use **Foreground Service**).
 	- Exact timing alarms (use AlarmManager).
 	- Bluetooth device input → needs **real-time listeners**.
-
-### How It Works Inside WorkManager
-The reason why WorkManager is **guaranteed** → because of the following persistence layer:
-- Work is stored in an **internal SQLite DB**.
-- Worker states & constraints are tracked persistently.
-- If app/device restarts → SQLite DB reloads → resumes pending work.
-- Uses OS schedulers:
-	- JobScheduler (preferred)
-	- AlarmManager + BroadcastReceiver (fallback)
-
-
-LifeCycle of WorkManager
-
-**WorkManager vs Foreground Service vs AlarmManager**
