Updated Backgrpund Task

--- a/Jetpack/2. Work Manager/3. Background Task.md
+++ b/Jetpack/2. Work Manager/3. Background Task.md
@@ -30,7 +30,7 @@
 - This is useful if you want to tie the task to the UI lifecycle.
 - Clean, lifecycle-aware.
 - Restrictions: 
-	- Not for guaranteed long-running background tasks.
+	- Not for guaranteed long-running background tasks. If the app is killed, the process is killed too.
 	- Should **not** be used for long-running or scheduled tasks.
 
 #### 5. Background Services
@@ -45,7 +45,7 @@
 - Restrictions:
 	- Requires a **notification** to be shown.
 	- In Android 12: must call `startForeground()` within 10s of starting.
-	- Background-start restrictions: can't freely start services when the app is in the background (post Oreo).
+	- Background-start restrictions: can't freely start services when the app is in the background (post Oreo). In short, this service only starts when the app is in the foreground state.
 
 #### 7. JobScheduler
 - It schedules jobs with conditions (network available, charging, idle).
@@ -61,7 +61,7 @@
 - Restrictions:
 	- Before Android 6.0 (Marshmallow), if you set an alarm with `AlarmManager.setExact()` or `setRepeating()`, it fired **at the exact time** you specified.
 	- After Android 6.0, when the phone is **idle (No Activity on the Phone)**, Normal alarms (`set()`, `setRepeating()`, even `setExact()`) are **delayed**.
-	- If you want to still run an alarm during idle mode use `setExactAndAllowWhileIdle()`. But if abused, Android kills your alarms.
+	- If you want to still run an alarm during idle mode, use `setExactAndAllowWhileIdle()`. But if abused, Android kills your alarms.
 	- No guarantee of execution when the app is idle.
 
 #### 9. BroadcastReceiver
@@ -82,6 +82,3 @@
 	- Uses **JobScheduler** (API 23+) or **AlarmManager + BroadcastReceiver** (below API 23).
 	- Minimum periodic interval = **15 minutes**.
 	- Not for exact timing tasks.
-
-
-# Why prefer WorkManager instead of JobScheduler?
